<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="12dp"
        android:background="@drawable/round_grey"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txv_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Edwin Song"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/txv_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/accept"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:shadowColor="@color/grey"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/container_size"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txv_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"
                    android:text="14*16 Feet"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/container_weight"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txv_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"
                    android:text=" 500 kg"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup_time"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txv_pickup_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"
                    android:text=" 8 Jun 7:00AM"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup_at"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txv_pickup_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"
                    android:text=" London, England"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dropoff_at"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txv_dropoff_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"
                    android:text=" London, England"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_location"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txv_return_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:text=" London, England"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_ready"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txv_order_ready"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_txt"
                    android:textSize="12sp"
                    android:text=" London, England"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>